--- a/modules/_navbar.scss
+++ b/modules/_navbar.scss
@@ -26,6 +26,7 @@
   .nav-content {
     display: flex;
     height: auto;
+    align-items: baseline;
   }
 
   & a {
